Fix openssl-pki dependency

--- a/ansible/roles/openssl-pki/tasks/main.yml
+++ b/ansible/roles/openssl-pki/tasks/main.yml
@@ -1,5 +1,11 @@
 ---
 
+- name: Install python dependencies
+  apt:
+    pkg:
+    - python-openssl
+    state: present
+  
 - name: Ensure directory exists for custom PKIs
   file:
     path: "{{ custom_ssl_pki_root_dir }}/{{ item.pki_name }}"
