Rename hosts and update IPs to prepare multi-masters

--- a/ansible/inventories/vagrant/inventory.ini
+++ b/ansible/inventories/vagrant/inventory.ini
@@ -1,24 +1,24 @@
 
-master ansible_host=192.168.100.10
-node-1 ansible_host=192.168.100.11
-node-2 ansible_host=192.168.100.12
-node-home ansible_host=192.168.100.13
+master-1 ansible_host=192.168.100.11
+master-2 ansible_host=192.168.100.12
+master-3 ansible_host=192.168.100.13
+node-home ansible_host=192.168.100.14
 
 [controller]
-master
+master-1
 
 [dns_servers]
-master
+master-1
 
 [reverse_proxies]
-master
+master-1
 
 [kubernetes_masters]
-master
+master-1
 
 [kubernetes_nodes]
-node-1
-node-2
+master-2
+master-3
 node-home
 
 [kubernetes:children]
@@ -26,9 +26,9 @@ kubernetes_masters
 kubernetes_nodes
 
 [glusterfs_servers]
-master
-node-1
-node-2
+master-1
+master-2
+master-3
 
 [glusterfs_clients:children]
 kubernetes
