--- a/ansible/roles/glusterfs-server-install/defaults/main.yml
+++ b/ansible/roles/glusterfs-server-install/defaults/main.yml
@@ -10,8 +10,8 @@ glusterfs_brick_filesystem: ext4
 #    replicas: 2
 #    capacity: 2G
 #    arbiterCapacity: 256M
-#    nodes: [node-1, node-2]
-#    arbiters: [master]
+#    nodes: [master-2, master-3]
+#    arbiters: [master-1]
 #    mount_path: /path/on/kubernetes/node
 
 gluster_exporter_port: 8090
