Add keepalived role

--- a/ansible/site.yml
+++ b/ansible/site.yml
@@ -28,6 +28,7 @@
   roles:
     - { role: openssl-pki-deploy, tags: openssl-pki }
     - { role: nginx, tags: nginx }
+    - keepalived
     - fail2ban
 
 - name: Prepare Kubernetes members
