Bind NGinx on the Keepalivec virtual IP

--- a/ansible/roles/nginx/defaults/main.yml
+++ b/ansible/roles/nginx/defaults/main.yml
@@ -1,5 +1,6 @@
 ---
 
+nginx_listen_ip: "*"
 nginx_ssl_dhparam_generate: False
 nginx_ssl_dhparam_path: /etc/nginx/dhparams.pem
 nginx_ssl_dhparam_size: 2048
