--- a/ansible/roles/nginx/tasks/main.yml
+++ b/ansible/roles/nginx/tasks/main.yml
@@ -1,5 +1,11 @@
 ---
 
+- name: Allow non local ip bind
+  sysctl:
+    name: "net.ipv4.ip_nonlocal_bind"
+    value: "1"
+    state: present
+
 - name: Install NGinx
   apt:
     pkg: nginx
