Rework firewall rules

--- a/ansible/roles/dnsmasq/tasks/main.yml
+++ b/ansible/roles/dnsmasq/tasks/main.yml
@@ -1,5 +1,10 @@
 ---
 
+- name: Configure UFW for dnsmasq
+  import_tasks: ../../firewall/tasks/add-applications.yml
+  vars:
+    ufw_applications: "{{ dnsmasq_ufw_applications }}"
+
 - name: Install dnsmasq
   apt:
     pkg:
