--- a/ansible/roles/firewall/defaults/main.yml
+++ b/ansible/roles/firewall/defaults/main.yml
@@ -1,6 +1,6 @@
 ---
 
-#firewall_applications:
+#custom_ufw_applications:
 #  - name: application
 #    title: My application
 #    description: Great Application!
