--- a/ansible/roles/kubernetes-preinstall/tasks/main.yml
+++ b/ansible/roles/kubernetes-preinstall/tasks/main.yml
@@ -1,6 +1,5 @@
 ---
 
-
 # https://kubernetes.io/docs/setup/independent/install-kubeadm/
 # https://github.com/kubernetes-sigs/kubespray/
 # https://cyril.deguet.com/fr/2018/02/12/kubernetes-debian-vps/
@@ -15,6 +14,11 @@
 - name: Disable swap right now
   command: swapoff -a
   when: ansible_swaptotal_mb > 0
+
+- name: Configure UFW for Kubernetes
+  import_tasks: ../../firewall/tasks/add-applications.yml
+  vars:
+    ufw_applications: "{{ kubernetes_ufw_applications }}"
 
 - name: Add Kubenetes repo key
   apt_key:
