--- a/ansible/roles/nginx/defaults/main.yml
+++ b/ansible/roles/nginx/defaults/main.yml
@@ -82,3 +82,17 @@ nginx_extra_log_formats: []
 #  - path: /path/to/htpasswd_something
 #    credentials:
 #      - userName:$apr1$XT1TxDG3$g1A8VB02XE9oCMHYdqd98. #password generated with : openssl passwd -apr1
+
+
+nginx_ufw_applications:
+  - name: custom_nginx
+    title: Nginx Web Server
+    description: Small, but very powerful and efficient web server
+    ports: 80,443/tcp
+    rule: allow
+#  - name: some_stream
+#    title: Some Stream
+#    description: Some Stream
+#    ports: 8880,8443/tcp
+#    rule: allow
+
