Add HAproxy in front of Kubernetes API Server

--- a/ansible/site.yml
+++ b/ansible/site.yml
@@ -58,6 +58,7 @@
 - name: Provision Kubernetes masters
   hosts: kubernetes_masters
   roles:
+    - kubernetes-master-haproxy
     - kubernetes-master
     - kubernetes-postinstall
 
