Split the kubernetes_masters group in bootstrap and others

--- a/ansible/inventories/vagrant/inventory.ini
+++ b/ansible/inventories/vagrant/inventory.ini
@@ -15,8 +15,14 @@ master-1
 master-2
 master-3
 
-[kubernetes_masters]
+[kubernetes_master_bootstrap]
 master-1
+
+[kubernetes_master_others]
+
+[kubernetes_masters:children]
+kubernetes_master_bootstrap
+kubernetes_master_others
 
 [kubernetes_nodes]
 master-2
