Rename group kubernetes_nodes to kubernetes_workers

--- a/ansible/inventories/vagrant/inventory.ini
+++ b/ansible/inventories/vagrant/inventory.ini
@@ -24,14 +24,14 @@ master-1
 kubernetes_master_bootstrap
 kubernetes_master_others
 
-[kubernetes_nodes]
+[kubernetes_workers]
 master-2
 master-3
 node-home
 
 [kubernetes:children]
 kubernetes_masters
-kubernetes_nodes
+kubernetes_workers
 
 [glusterfs_servers]
 master-1
