--- a/ansible/site.yml
+++ b/ansible/site.yml
@@ -65,8 +65,8 @@
   roles:
     - kubernetes-master-bootstrap
 
-- name: Provision Kubernetes nodes
-  hosts: kubernetes_nodes
+- name: Provision Kubernetes workers
+  hosts: kubernetes_workers
   roles:
     - kubernetes-node
 
