Rename group kubernetes to kubernetes_nodes

--- a/ansible/inventories/vagrant/inventory.ini
+++ b/ansible/inventories/vagrant/inventory.ini
@@ -29,7 +29,7 @@ master-2
 master-3
 node-home
 
-[kubernetes:children]
+[kubernetes_nodes:children]
 kubernetes_masters
 kubernetes_workers
 
@@ -39,7 +39,7 @@ master-2
 master-3
 
 [glusterfs_clients:children]
-kubernetes
+kubernetes_nodes
 
 [glusterfs:children]
 glusterfs_servers
