--- a/ansible/roles/kubernetes-node/tasks/main.yml
+++ b/ansible/roles/kubernetes-node/tasks/main.yml
@@ -20,23 +20,62 @@
   set_fact:
     has_already_joined_kubernetes_cluster: "{{ kubelet_conf_result.stat.isreg | default(false) | bool }}"
 
-- name: Generate token to join on master
+- name: Create Kubernetes PKI folders on masters
+  file:
+    path: "{{ item }}"
+    state: directory
+  with_items:
+    - /etc/kubernetes/pki
+    - /etc/kubernetes/pki/etcd
+  when: "'kubernetes_master_others' in group_names"
+
+- name: Fetch Kubernetes PKI from master bootstrap
+  synchronize:
+    src: "{{ item }}"
+    dest: "{{ item }}"
+  delegate_to: "{{ groups['kubernetes_master_bootstrap'][0] }}"
+  with_items:
+    - /etc/kubernetes/pki/ca.crt
+    - /etc/kubernetes/pki/ca.key
+    - /etc/kubernetes/pki/sa.key
+    - /etc/kubernetes/pki/sa.pub
+    - /etc/kubernetes/pki/front-proxy-ca.crt
+    - /etc/kubernetes/pki/front-proxy-ca.key
+    - /etc/kubernetes/pki/etcd/ca.crt
+    - /etc/kubernetes/pki/etcd/ca.key
+  when: "'kubernetes_master_others' in group_names"
+
+- name: Generate token to join on master bootstrap
   command: kubeadm token create --ttl=5m --description="Token to allow {{ inventory_hostname }} to join" --print-join-command
-  register: join_command
+  register: join_command_result
   delegate_to: "{{ groups['kubernetes_master_bootstrap'][0] }}"
   become: yes
   become_user: "{{ kubernetes_user.name }}"
   when: not has_already_joined_kubernetes_cluster
+
+- name: Generate master join command
+  set_fact:
+    join_command: "{{ join_command_result.stdout_lines[0] }} --experimental-control-plane --apiserver-advertise-address {{ kubernetes_apiserver_ip }}"
+  when:
+    - not has_already_joined_kubernetes_cluster
+    - "'kubernetes_masters' in group_names"
+
+- name: Generate worker join command
+  set_fact:
+    join_command: "{{ join_command_result.stdout_lines[0] }}"
+  when:
+    - not has_already_joined_kubernetes_cluster
+    - "'kubernetes_masters' not in group_names"
 
 - name: Fail when the join command is not supplied
   fail:
     msg: "kubeadm token create didn't return a join command"
   when:
     - not has_already_joined_kubernetes_cluster
-    - "'kubeadm join' not in join_command.stdout_lines[0]"
+    - "'kubeadm join' not in join_command"
 
 - name: Join cluster
-  command: "{{ join_command.stdout_lines[0] }}"
+  command: "{{ join_command }}"
   when: not has_already_joined_kubernetes_cluster
 
 - name: Configure kubectl
