Add ability to add/remove taints

--- a/ansible/roles/kubernetes-postinstall/defaults/main.yml
+++ b/ansible/roles/kubernetes-postinstall/defaults/main.yml
@@ -7,3 +7,9 @@ kubernetes_user:
 #kubernetes_node_labels:
 #  - name: foo
 #    value: bar
+
+#kubernetes_node_taints:
+#  - key: key
+#    value: value
+#    effect: NoSchedule
+#    state: present|absent
