Use certbot on a single host, and deploy the certs on the other loadbalancers

--- a/ansible/roles/nginx/defaults/main.yml
+++ b/ansible/roles/nginx/defaults/main.yml
@@ -4,6 +4,8 @@ nginx_listen_ip: "*"
 nginx_ssl_dhparam_generate: False
 nginx_ssl_dhparam_path: /etc/nginx/dhparams.pem
 nginx_ssl_dhparam_size: 2048
+nginx_ssl_certbot_enabled: false
+nginx_ssl_certbot_slaves: []
 
 nginx_extra_log_formats: []
 #  - name: extra
