--- a/ansible/roles/nginx/tasks/ssl_certs_letsencrypt.yml
+++ b/ansible/roles/nginx/tasks/ssl_certs_letsencrypt.yml
@@ -7,6 +7,14 @@
   with_items: "{{ nginx_sites }}"
   when: item.https_cert is defined and item.https_cert.mode == "letsencrypt"
 
+- name: Generate deploy cert script
+  template:
+    dest: "{{ nginx_ssl_letsencrypt_deploy_certs_script }}"
+    src: deploy_letsencrypt_certs.sh.j2
+    mode: 0755
+  with_items: "{{ nginx_sites }}"
+  when: item.https_cert is defined and item.https_cert.mode == "letsencrypt"
+
 - name: Ensures the webroot folders exist
   file:
     path: "{{ item.https_cert.docroot }}"
@@ -52,14 +60,14 @@
     - skip_ansible_lint
 
 - name: Create staging letsencrypt certificate
-  command: certbot certonly -n --webroot -w {{ item.https_cert.docroot }} -m {{ item.https_cert.email }} --staging --agree-tos -d {{ item.server_name }} --post-hook "systemctl reload nginx"
+  command: certbot certonly -n --webroot -w {{ item.https_cert.docroot }} -m {{ item.https_cert.email }} --staging --agree-tos -d {{ item.server_name }} --deploy-hook "{{ nginx_ssl_letsencrypt_deploy_certs_script }}"
   args:
     creates: /etc/letsencrypt/live/{{ item.server_name }}
   with_items: "{{ nginx_sites }}"
   when: item.https_cert is defined and item.https_cert.mode == "letsencrypt" and not item.https_cert.live | default(False)
 
 - name: Create live letsencrypt certificate
-  command: certbot certonly -n --webroot -w {{ item.https_cert.docroot }} -m {{ item.https_cert.email }} --agree-tos -d {{ item.server_name }} --post-hook "systemctl reload nginx"
+  command: certbot certonly -n --webroot -w {{ item.https_cert.docroot }} -m {{ item.https_cert.email }} --agree-tos -d {{ item.server_name }} --deploy-hook "{{ nginx_ssl_letsencrypt_deploy_certs_script }}"
   args:
     creates: /etc/letsencrypt/live/{{ item.server_name }}
   with_items: "{{ nginx_sites }}"
