--- a/ansible/roles/kubernetes-apps/tasks/apps/logging-elasticsearch.yml
+++ b/ansible/roles/kubernetes-apps/tasks/apps/logging-elasticsearch.yml
@@ -1,5 +1,11 @@
 ---
 
+- name: Install python dependencies
+  apt:
+    pkg:
+    - python-passlib
+    state: present
+
 - name: Read generated files
   slurp:
     src: "{{ item }}"
