--- a/ansible/roles/kubernetes-apps/handlers/apps/logging-elasticsearch.yml
+++ b/ansible/roles/kubernetes-apps/handlers/apps/logging-elasticsearch.yml
@@ -6,13 +6,16 @@
     method: GET
     headers:
       Host: "infra.{{ web_base_domain }}"
-    return_content: no
+    return_content: yes
     validate_certs: no
+    status_code:
+      - 200
+      - 503
     user: "{{ logging_elasticsearch_exporter_user }}"
     password: "{{ logging_elasticsearch_exporter_password }}"
   register: elasticsearch_available
   until:
-  - elasticsearch_available.status == 200
+  - (elasticsearch_available.status == 200) or (elasticsearch_available.status == 503 and "Open Distro Security not initialized (SG11)" in elasticsearch_available.content)
   retries: 18
   delay: 10
   listen: "Reconfigure Elasticsearch security"
