--- a/ansible/roles/kubernetes-apps/defaults/main.yml
+++ b/ansible/roles/kubernetes-apps/defaults/main.yml
@@ -307,6 +307,8 @@ grafana_ldap_base: "{{ openldap_ldap_basedn }}"
 grafana_ldap_manager_dn: "{{ openldap_ldap_readonly_user_dn }}"
 grafana_ldap_manager_password: "{{ openldap_ldap_readonly_user_password }}"
 
+release_watcher_path: /opt/release-watcher
+
 # TODO : these user / passwords can't easily be changed without wiping the ES cluster.
 # We probably need to run /usr/share/elasticsearch/plugins/opendistro_security/tools/securityadmin.sh inside the container
 logging_elasticsearch_internal_users: []
