Add python passlib and bcrypt as ansible requirements

--- a/ansible/roles/kubernetes-ansible/tasks/main.yml
+++ b/ansible/roles/kubernetes-ansible/tasks/main.yml
@@ -6,6 +6,8 @@
     - python-pip
     - python-setuptools
     - python-docker
+    - python-passlib
+    - python-bcrypt
     state: present
 
 - name: Install pip dependencies
