--- a/ansible/roles/kubernetes-apps/tasks/apps/home-nodered.yml
+++ b/ansible/roles/kubernetes-apps/tasks/apps/home-nodered.yml
@@ -2,9 +2,11 @@
 
 - name: Build and push Node-RED image
   docker_image:
-    path: "{{ kubernetes_app_root_path }}/home/nodered/build"
     name: "{{ kubernetes_registry_url }}/nodered"
-    force: yes
+    source: build
+    build:
+      path: "{{ kubernetes_app_root_path }}/home/nodered/build"
+      pull: yes
     push: yes
 
 - name: Deploy Node-RED
