--- a/apps/monitoring/release-watcher/config/watchers.yaml
+++ b/apps/monitoring/release-watcher/config/watchers.yaml
@@ -89,10 +89,12 @@ watchers:
   - type: docker_registry
     repo: registry-1.docker.io
     image: eclipse-mosquitto
-    tag: 1.5.5
+    tag: 1.6.3
+    includes:
+      - "[0-9]+\\.[0-9]+\\.[0-9]+.*"
     excludes:
       - latest
-      - ^1\.4\.
+      - ^1\.[0-5]]\.
   - type: docker_registry
     repo: registry-1.docker.io
     image: nodered/node-red-docker
