--- a/apps/monitoring/release-watcher/config/watchers.yaml
+++ b/apps/monitoring/release-watcher/config/watchers.yaml
@@ -157,12 +157,15 @@ watchers:
       - 0\.0\.[0-2]?[0-9]$
   - type: docker_registry
     repo: registry-1.docker.io
-    image: linuxserver/unifi
-    tag: 188
+    image: linuxserver/unifi-controller
+    tag: amd64-5.10.25-ls22
     includes:
-      - "[0-9]{3}"
+      - amd64-[0-9]+\.[0-9]+\.[0-9]+.*
     excludes:
-      - "1[0-7][0-9]"
+      - LTS
+      - latest
+      - amd64-5\.[0-9]\..*
+      - amd64-5\.10\.[01]?[0-9]-.*
   - type: docker_registry
     repo: registry-1.docker.io
     image: redis
