--- a/apps/monitoring/release-watcher/config/watchers.yaml
+++ b/apps/monitoring/release-watcher/config/watchers.yaml
@@ -209,9 +209,9 @@ watchers:
   - type: docker_registry
     repo: registry-1.docker.io
     image: fluent/fluentd
-    tag: v1.4.2-debian-2.0
+    tag: v1.5.2-debian-1.0
     includes:
-      - v[1-9]\.[0-9]+\.[0-9]+.*debian-2.0
+      - v[1-9]\.[0-9]+\.[0-9]+.*debian.*
   - type: docker_registry
     repo: registry-1.docker.io
     image: amazon/opendistro-for-elasticsearch-kibana
