--- a/apps/monitoring/release-watcher/config/watchers.yaml
+++ b/apps/monitoring/release-watcher/config/watchers.yaml
@@ -244,12 +244,12 @@ watchers:
   - type: docker_registry
     repo: registry-1.docker.io
     image: linuxserver/heimdall
-    tag: amd64-2.1.13-ls40
+    tag: amd64-2.2.1-ls47
     includes:
       - amd64-[0-9]+\.[0-9]+\.[0-9]+.*
     excludes:
       - amd64-[0-1]\.
-      - amd64-2\.0\.
+      - amd64-2\.[0-1]\.
   - type: docker_registry
     repo: registry-1.docker.io
     image: linuxserver/tt-rss
