Workaround release_watcher false positive for nginx-ingress-controller

--- a/apps/monitoring/release-watcher/config/watchers.yaml
+++ b/apps/monitoring/release-watcher/config/watchers.yaml
@@ -126,7 +126,10 @@ watchers:
   - type: docker_registry
     repo: quay.io
     image: kubernetes-ingress-controller/nginx-ingress-controller
-    tag: 0.24.1
+    # We are using 0.24.1, but the registry API doesn't list this version for some reason.
+    # To avoid false positives, we keep 0.24.0 here
+    #tag: 0.24.1
+    tag: 0.24.0
     excludes:
       - .*(alpha|beta).*
       - 0\.[0-9]\.
