--- a/ansible/roles/kubernetes-apps/defaults/main.yml
+++ b/ansible/roles/kubernetes-apps/defaults/main.yml
@@ -8,6 +8,7 @@ kubernetes_user:
 
 kubernetes_defnitions_root_dir: /opt/provision/kubernetes
 
+registry_servername: registry.default
 kubernetes_registry_port: 30500
 kubernetes_registry_url: 127.0.0.1:{{ kubernetes_registry_port }}
 
