Add ability to export headers from LemonLDAP

--- a/ansible/roles/kubernetes-apps/defaults/main.yml
+++ b/ansible/roles/kubernetes-apps/defaults/main.yml
@@ -101,6 +101,8 @@ lemonldap_location_rules:
 #      - name: New Rule
 #        uri: ^new
 #        rule: accept
+    exportedHeaders:
+      name: value
   - domain: "web.{{ web_base_domain }}"
     default_rule: accept
 
